Updated page layout, cleaner on mobile

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 
 <head>
-    <title> Sudarson Nanthacoumarane | Portfolio </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "icon" type = "image/png" href = "/assets/img/logos/SN-logo.png">
+
+    <title> Sudarson Nanthacoumarane | Portfolio </title>
+    
     <!-- Import common page fonts and attributes -->
     <script>
         fetch('/partials/head.html?1')
@@ -13,9 +17,8 @@
         });
     </script>
 
+    <!-- Import CSS  -->
     <link rel="stylesheet" href="/assets/css/main.css?2">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 
@@ -51,7 +54,32 @@
                     <p>Outside of work, I’m a guitarist, a passionate fan of rock music, and a Formula 1 enthusiast.</p>
                 </div>
             </div>
+        </section>
 
+        <!-- Logo Banner -->
+        <section id="logo-banner" class="logo-banner" data-aos="fade-up">
+            <div class="logo-row">
+                <div class="logo-item" data-tooltip="Vitibot">
+                    <img src="/assets/img/logos/VitiBot_logo.png" alt="Vitibot Logo">
+                </div>
+                <div class="logo-item" data-tooltip="CNRS">
+                    <img src="/assets/img/logos/cnrs.png" alt="CNRS Logo">
+                </div>
+                <div class="logo-item" data-tooltip="Centrale Nantes">
+                    <img src="/assets/img/logos/Centrale_Nantes_Large.png" alt="Centrale Nantes Logo">
+                </div>
+                <div class="logo-item" data-tooltip="Makara Circle">
+                    <img src="/assets/img/logos/Makara_logo.png" alt="Makara Circle Logo">
+                </div>
+                <div class="logo-item" data-tooltip="BMSIT">
+                    <img src="/assets/img/logos/bmsit.png" alt="BMSIT Logo">
+                </div>
+            </div>
+        </section>
+
+
+        <section id="skills" data-aos="fade-up">
+            <h2>Skills</h2>
             <div class="skills-grid">
                 <div class="skill-column design" data-tooltip="My engineering toolbox consists of the latest industry standard CAD and FEA tools.">
                     <h3>Mechanical Design</h3>
@@ -97,27 +125,7 @@
             </div>
         </section>
 
-        <!-- Logo Banner -->
-        <section id="logo-banner" class="logo-banner" data-aos="fade-up">
-            <div class="logo-row">
-                <div class="logo-item" data-tooltip="Vitibot">
-                    <img src="/assets/img/logos/VitiBot_logo.png" alt="Vitibot Logo">
-                </div>
-                <div class="logo-item" data-tooltip="CNRS">
-                    <img src="/assets/img/logos/cnrs.png" alt="CNRS Logo">
-                </div>
-                <div class="logo-item" data-tooltip="Centrale Nantes">
-                    <img src="/assets/img/logos/Centrale_Nantes_Large.png" alt="Centrale Nantes Logo">
-                </div>
-                <div class="logo-item" data-tooltip="Makara Circle">
-                    <img src="/assets/img/logos/Makara_logo.png" alt="Makara Circle Logo">
-                </div>
-                <div class="logo-item" data-tooltip="BMSIT">
-                    <img src="/assets/img/logos/bmsit.png" alt="BMSIT Logo">
-                </div>
-            </div>
-        </section>
-
+        
 
         <!-- Portfolio Section -->
         <section id="portfolio" class="portfolio-section" data-aos="fade-up">
@@ -170,33 +178,33 @@
         </section>
 
         <!-- Expertise Section (Portfolio Clone)-->
-        <section id="portfolio" class="portfolio-section" data-aos="fade-up">
+        <section id="services" class="portfolio-section" data-aos="fade-up">
             <h2>Expertise</h2>
             <div class="portfolio">
 
                 <div class="portfolio-item">
-                    <a href="/pages/services/service-mechanical.html">
+                    <a href="/pages/work-in-progress.html">
                         <img src="/assets/img/Ratio 3-2/TurboSection2.png" alt="VitiBot">
                         <div class="portfolio-title">Mechanical Design</div>
                     </a>
                 </div>
 
                 <div class="portfolio-item">
-                    <a href="/pages/services/service-fea.html">
+                    <a href="/pages/work-in-progress.html">
                         <img src="/assets/img/Ratio 3-2/Hub_FEA.JPG" alt="VitiBot">
                         <div class="portfolio-title">Finite Element Analysis</div>
                     </a>
                 </div>
 
                 <div class="portfolio-item">
-                    <a href="/pages/services/service-3d-printing.html">
+                    <a href="/pages/work-in-progress.html">
                         <img src="/assets/img/Ratio 3-2/3d-printer.jpg" alt="VitiBot">
                         <div class="portfolio-title">Design for Additive Manufacturing</div>
                     </a>
                 </div>
 
                 <div class="portfolio-item">
-                    <a href="/pages/projects/project-programming.html">
+                    <a href="/pages/work-in-progress.html">
                         <img src="/assets/img/Ratio 3-2/codeblur.png" alt="Scientific Programming">
                         <div class="portfolio-title">Programming</div>
                     </a>
